# ROS2-GoPiGo3

./: Directed_Install.md  INSTALL_FROM_IMAGE.md  Install_from_image.md  README.md  ROS2_GoPiGo3_Visualization.md  Reference.md  Setup_1_Ubuntu22.04_LTS_Server.md  Setup_1_Ubuntu22.04_LTS_Server.txt  Setup_2_ROS2_HumbleHawksbill_on_GoPiGo3.sh  Setup_3_Test.txt  Statistics.md  Test_ROS2_GoPiGo3.md  Tuning ROS2 GoPiGo3  Tuning ROS2 GoPiGo3.md  URDF_File_Introduction.md  gopigo3ros2ws.tgz  mk_pi_user.sh  setup_gopigo3_on_ubuntu.sh  test_communication.sh  test_motors.sh
Docs/: Directed_Install.md  INSTALL_FROM_IMAGE.md  Obsolete_Setup_1_Ubuntu22.04_LTS_Server.md  README.md  Reference.md  Setup_1_Ubuntu22.04_LTS_Server.md  Test_ROS2_GoPiGo3.md  Tuning_ROS2_GoPiGo3.md  URDF_File_Introduction.md
misc/myPicoGPT/: runit.sh
myYDLidar-SDK/: NOTES_LiDAR_X4_2022.txt  ydlidar_test.py  ydlidar_test_interactive.cpp
ros2desk/: ROS2_GoPiGo3_Visualization.md  check_all_urdfs.sh  dave.urdf  get_ros2_gopigo3_desktop_visualization_files.sh  run_image_view.sh  show_rqt_graph.sh  view_frames.sh
ros2ws/: call_odom_reset_srv.sh  check_battery.sh  cpp_build.sh  echo_battery_voltage.sh  echo_distance_topic.sh  echo_encoder_topics.sh  echo_imu_topics.sh  echo_lidar_topic.sh  echo_map_topic.sh  echo_motor_status_topic.sh  echo_odom_topic.sh  echo_ultrasonic_topic.sh  ekf_build.sh  export_jpg_map.sh  gopigo3_battery.py  install_slam_toolbox.sh  list_active_topics.sh  list_running_nodes.sh  list_services.sh  list_topics_with_type.sh  monitor.sh  my_mapper_params_online_async.yaml  my_mapper_params_online_async.yaml.v4  my_mapper_params_online_sync.yaml  nohup.out  pub_center_servo.sh  pub_servo_right_45.sh  rebuild.sh  run_teleop_gopigo3_keyboard.sh  save_map.sh  show_distance_sensor_node_info.sh  show_gopigo3_node_info.sh  show_imu_node_info.sh  show_lidar_node_info.sh  show_ultrasonic_ranger_node_info.sh  snes.slow.config.yaml  start_camera_node.sh  start_demo_listener.sh  start_demo_talker.sh  start_distance_sensor_node.sh  (+23 more)
ros2ws/dave/: start_dave_robot_and_joint_state.sh
ros2ws/finmark/: start_finmark_robot_and_joint_state.sh  start_robot_finmark.sh
ros2ws/install/: local_setup.sh  setup.sh
ros2ws/install/ros2_libcamera_pub/share/ros2_libcamera_pub/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2ws/install/teleop_gopigo3_keyboard/share/teleop_gopigo3_keyboard/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2ws/log/: latest_build
ros2ws/src/gopigo3_ekf/: CMakeLists.txt  package.xml
ros2ws/src/gopigo3_ekf/config/: ekf.yaml
ros2ws/src/gopigo3_ekf/launch/: ekf_v3.launch.py
ros2ws/src/ros2_gopigo3_node/: gopigo3_node_params.yaml  package.xml  setup.cfg  setup.py
ros2ws/src/ros2_gopigo3_node/ros2_gopigo3_node/: distance_sensor.py  distance_sensor_subscriber.py  gopigo3_node.py.v4  imu_sensor.py  odometer.py.v4  safety_shutdown.py  ultrasonic_ranger.py
ros2ws/src/ros2_gopigo3_node/urdf/: check_all_urdfs.sh  gpgMin.urdf
ros2ws/src/scan_client/: README.md  package.xml  scan_client.py  setup.cfg  setup.py
systests/: README.md
systests/battery/: measureLife.py
systests/cpp/: CMakeLists.txt  GoPiGo3.cpp  GoPiGo3.h  README.md
systests/cpp/json_lib/: build.sh  (+1 more)
systests/distance_sensor/: distance_sensor_test.py
systests/gpg_config/: drive_1m.py  gpg3_config.json.bak  spin_360.py  update_gpg3_config.py  wheelBaseRotateTest.py  wheelDiaDriveTest.py
systests/gstreamer/: basic-tutorial-1  basic-tutorial-1.c  build.sh
systests/imu/: README.md  readIMU.sh
systests/libcamera-apps/: test-libcamera-jpeg.sh  test-raspiyuv.sh
systests/motor/: stop.py
systests/opencv/: snapJPG_opencv.py  test_fps.py
systests/picamera2/: snapJPG2_picamera2.py
systests/sbc-bench/: NOTES_SBC-BENCH.txt  sbc-bench-extensive.sh
systests/sdcard/: README.txt  run_sdtest.sh
systests/snes_joypad/: install_snes_config.sh  snes.config.yaml
systests/status/: status.sh
systests/swap/: showZSWAPstatus.sh  use1GB.py  use2GB.py  use4GB.py  use500MB.py
systests/sysbench/: sysbench_notes.txt
systests/ydlidarx4/: LidarTest.py  lidar.py  stopLidar.py
updates/: ChangesSinceV4.md  odometer.py  ydlidar.yaml
utils/: backup.sh  clean4shrink.sh  cmdline.txt  config.txt  etc_systemd_system.ip_feedback.service  install_from_ROS2-GoPiGo3.sh  install_pigpiod.sh  ip_feedback.sh  make1GBswapfile.sh  network-config  pigpiod.service  setup_history.txt  setup_ip_feedback.sh
(+203 files in other folders)
