<?xml version="1.0"?>
<package format="2">
  <name>ros2_libcamera_pub</name>
  <version>2.3.2</version>
  <description>
      Makeshift camera image publisher using libcamera-jpg
      to publish an image roughly 5 times per minute
  </description>

  <maintainer email="slowrunner@noreply.com">slowrunner</maintainer>

  <license>BSD License 2.0</license>

  <url type="website"></url>

  <author email="slowrunner@noreply.com">slowrunner</author>
  <author>slowrunner</author>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
