<?xml version="1.0"?>
<package format="2">
  <name>teleop_gopigo3_keyboard</name>
  <version>2.3.2</version>
  <description>
    A ROS2 GoPiGo3 teleoperation node to convert keyboard commands to Twist
    messages.
  </description>

  <maintainer email="slowrunner@noreply.com">Chris Lalancette</maintainer>

  <license>BSD License 2.0</license>

  <url type="website"></url>

  <author email="slowrunner@noreply.com">slowrunner</author>
  <author>anonymous</author>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
